<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="refresh_header_pulling">Dropdown can refresh</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_loading">Loading</string>
    <string name="refresh_header_release">Release to refresh immediately</string>
    <string name="refresh_header_finish">Refresh completed</string>
    <string name="refresh_header_failed">Refresh failed</string>
    <string name="refresh_header_update">Last M-d HH:mm</string>
    <string name="refresh_footer_pulling">Pull up and load more</string>
    <string name="refresh_footer_release">Release and load immediately</string>
    <string name="refresh_footer_loading">Loading</string>
    <string name="refresh_footer_refreshing">Refreshing</string>
    <string name="refresh_footer_finish">Loading completed</string>
    <string name="refresh_footer_failed">Loading failed</string>
    <string name="refresh_footer_nothing">All have been loaded</string>
    <string name="black">Pull black</string>
    <string name="black_ing">Unlocking</string>
    <string name="black_1">Blacked</string>
    <string name="black_ing_1">The blackout has been canceled</string>
    <string name="bonus_sign">Sign in immediately</string>
    <string name="bonus_sign_1">Sign in for %1$s consecutive days</string>
    <string name="bonus_sign_2">Sign in continuously to receive additional rewards</string>
    <string name="bonus_sign_3">%1$s day</string>
    <string name="beauty_init_error">Beauty initialization exception, unable to use</string>
    <string name="cash">Withdrawal account</string>
    <string name="cash_account_empty">You have not set up a withdrawal account at present</string>
    <string name="cash_add_account">Add a withdrawal account</string>
    <string name="cash_account_type">Account type</string>
    <string name="cash_input_bank_user_name">Please enter the cardholder name</string>
    <string name="cash_input_bank_account">Please enter the bank card account number</string>
    <string name="cash_input_bank_name">Please enter the bank name</string>
    <string name="cash_input_wx_account">Please enter your WeChat account</string>
    <string name="cash_input_ali_account">Please enter the Alipay account</string>
    <string name="cash_input_ali_name">Please enter the Alipay account name</string>
    <string name="cash_type_ali">Alipay</string>
    <string name="cash_type_wx">WeChat</string>
    <string name="cash_type_bank">Bank card</string>
    <string name="cash_delete">Do you want to delete this account</string>
    <string name="cash_record">Cash withdrawal record</string>
    <string name="coin_give">Gifts</string>
    <string name="coin_balance">Account balance</string>
    <string name="coin_pay_ali">Alipay</string>
    <string name="coin_pay_wx">WeChat payment</string>
    <string name="coin_charge_success">Recharge succeeded</string>
    <string name="coin_charge_failed">Recharge failed</string>
    <string name="coin_ali_not_install">Alipay is not installed</string>
    <string name="coin_wx_not_install">WeChat is not installed</string>
    <string name="coin_qq_not_install">QQ is not installed</string>
    <string name="pay_ali_not_enable">Alipay is not configured</string>
    <string name="pay_wx_not_enable">WeChat is not configured</string>
    <string name="pay_paypal_not_enable">Paypal is not configured</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_success">Copy succeeded</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_avatar">Image:</string>
    <string name="edit_profile_nickname">Nickname:</string>
    <string name="edit_profile_update_nickname">Modify nickname</string>
    <string name="edit_profile_update_sign">Modify signature</string>
    <string name="edit_profile_sign">Bio:</string>
    <string name="edit_profile_birthday">Birthday:</string>
    <string name="edit_profile_sex">Gender:</string>
    <string name="edit_profile_city">Location</string>
    <string name="edit_profile_impression">My anchor impression</string>
    <string name="edit_profile_update_avatar_success">Set the avatar successfully</string>
    <string name="edit_profile_sign_hint">Leave something behind</string>
    <string name="edit_profile_name_hint">Please enter a nickname</string>
    <string name="edit_profile_sign_max">You can enter up to 20 characters</string>
    <string name="edit_profile_name_max">The nickname can be up to 8 characters</string>
    <string name="edit_profile_name_empty">Please enter a nickname</string>
    <string name="edit_profile_sign_empty">Please enter your signature</string>
    <string name="edit_profile_right_date">Please select the correct date</string>
    <string name="edit_profile_length_font">The number of words exceeds the limit</string>
    <string name="newest">Latest</string>
    <string name="follow">Follow</string>
    <string name="following">has followed</string>
    <string name="follow_no_follow">You haven\'t followed anyone yet</string>
    <string name="follow_do_follow">Hurry up and pay attention to the people you are interested in</string>
    <string name="follow_no_follow_2">TA hasn\'t followed anyone yet</string>
    <string name="fans">Fans</string>
    <string name="fans_no_fans">You have no fans yet</string>
    <string name="fans_do_fans">Improving personal information will make more people pay attention to you</string>
    <string name="fans_no_fans_2">TA has no fans yet</string>
    <string name="find_pwd_forget">Forgot password</string>
    <string name="find_pwd_find">Retrieve immediately</string>
    <string name="guard_choose_duration">Select the guard duration</string>
    <string name="guard_right">Select Privileges</string>
    <string name="guard_buy">Open immediately</string>
    <string name="guard_buy_2">Enable guard</string>
    <string name="guard_buy_3">Renewal guard</string>
    <string name="guard_my">My</string>
    <string name="guard_guard">Guard</string>
    <string name="guard_week_con">Contribution this week</string>
    <string name="guard_no_data">Become the first guardian of TA</string>
    <string name="guard_tip_0">Go to open guard for your favorite anchors</string>
    <string name="guard_tip_1">You are the monthly guardian of the current anchor\nGuard date expires</string>
    <string name="guard_tip_2">You are the annual guardian of the current anchor\nGuard date expires</string>
    <string name="guard_gift_tip">Exclusive gift for the annual guardian</string>
    <string name="guard_no_data_2">You haven\'t guarded</string>
    <string name="guard_buy_tip">Your annual guardian for the current anchor\nUnable to open guard for 7 days/month</string>
    <string name="guard_buy_tip_2">You are the monthly guardian of the current anchor. The annual guardian will cover your monthly guardian duration. Do you want to open it?</string>
    <string name="guard_buy_tip_3">You will spend%1$s%2$s，Open for the anchor%3$s</string>
    <string name="guard_name_1">7-day guard</string>
    <string name="guard_name_2">Monthly guard</string>
    <string name="guard_name_3">Annual guard</string>
    <string name="guard_list">Guard list</string>
    <string name="guard_buy_msg">guarded the anchor</string>
    <string name="home_page">Home page</string>
    <string name="home_page_share_1">"%1$s"Also in%2$s,~Click to view TA\'s story</string>
    <string name="home_page_share_2">TA have %1$s fans,Come and watch!</string>
    <string name="im_live_anchor_msg">Hi~I\'m the anchor. Come and chat with me</string>
    <string name="im_type_image">[Image]</string>
    <string name="im_type_voide">[Voice]</string>
    <string name="im_type_location">[Location]</string>
    <string name="im_msg">Message</string>
    <string name="im_msg_ignore_unread">Ignore unread</string>
    <string name="im_msg_ignore_unread_2">Unread messages ignored</string>
    <string name="im_msg_ignore_unread_3">No unread messages for the time being</string>
    <string name="im_msg_send_failed">Message sending failed</string>
    <string name="im_send_too_fast">Frequent operations</string>
    <string name="im_you_are_blacked">The other party temporarily refused to receive your message</string>
    <string name="im_no_msg">You haven\'t received any messages yet</string>
    <string name="im_send_msg">Send Message</string>
    <string name="im_input_img">Pictures</string>
    <string name="im_input_camera">Shooting</string>
    <string name="im_input_voice">Voice input</string>
    <string name="im_input_location">Location</string>
    <string name="im_choose_image">Select a picture</string>
    <string name="im_no_image">No local image found</string>
    <string name="im_please_choose_image">Please select a picture</string>
    <string name="im_search_location">Search location</string>
    <string name="im_location_failed">No location information obtained</string>
    <string name="im_map_not_loaded">The map is not loaded</string>
    <string name="im_address_failed">Address not obtained</string>
    <string name="im_get_location_failed">Failed to get the location</string>
    <string name="im_follow_tip">Click Follow to see the other party\'s dynamic in time</string>
    <string name="im_follow_tip_2">Follow the other party successfully</string>
    <string name="im_press_say">Press and hold to speak</string>
    <string name="im_unpress_stop">Release end</string>
    <string name="im_please_say">Please speak</string>
    <string name="im_record_audio_too_short">The recording time is too short</string>
    <string name="video_comment_voice_tip">Slide your finger up to cancel sending</string>
    <string name="video_comment_voice_tip_1">Sending canceled</string>
    <string name="im_system_msg">System message</string>
    <string name="im_no_sys_msg">No system message at present</string>
    <string name="im_pri_chat">Private chat</string>
    <string name="impress">Impression of the anchor</string>
    <string name="impress_add">Add an impression</string>
    <string name="impress_add_max">Select up to three items</string>
    <string name="impress_please_choose">Please select impression</string>
    <string name="impress_not_changed">Impression not modified</string>
    <string name="impress_tip">Please select your impression of the anchor</string>
    <string name="impress_tip_2">The impression of the anchor you received</string>
    <string name="mall_387">Please enter the product name you want to search</string>
    <string name="a_107">Live shopping</string>
    <string name="a_108">Official Direct Sales · Authentic Guarantee</string>
    <string name="a_126">Turn off youth mode</string>
    <string name="a_136">No product information currently available in youth mode</string>
    <string name="select_language">Select Language</string>
    <string name="simple_chinese">Chinese</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="thai">Thai</string>
    <string name="burmese">Burmese</string>
    <string name="string_input_pass_word">Please enter the 6-digit payment password</string>
    <string name="string_input_zsryc">Please enter once</string>
    <string name="string_btn_qr">Confirm</string>
    <string name="string_input_bank_name">Please enter the bank name</string>
    <string name="string_input_bank_no">Please enter the bank card number</string>
    <string name="string_add">Add</string>
    <string name="string_input_pay">Please enter the payment amount</string>
    <string name="string_fkmoney">Payment amount (Ks)</string>
    <string name="string_qr_fk">Confirm payment</string>
    <string name="new_44">Quality assurance</string>
    <string name="new_45">Quality assurance</string>
    <string name="new_46">Quality assurance</string>
    <string name="new_47">Quality assurance</string>
</resources>