<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <include layout="@layout/view_title"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/edBankName"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:background="@color/transparent"
                android:hint="@string/string_input_bank_name"
                android:layout_marginTop="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:layout_height="46dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:background="#f1f2f5"
                />
        <EditText
                android:id="@+id/edBankCode"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:background="@color/transparent"
                android:hint="@string/string_input_bank_no"
                android:inputType="number"
                android:layout_marginTop="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:layout_height="46dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:background="#f1f2f5"
                />

    </LinearLayout>
    <com.hjq.shape.view.ShapeTextView
            android:id="@+id/addBank"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="@dimen/dp_30"
            app:shape_radius="@dimen/dp_4"
            android:textSize="@dimen/sp_14"
            android:text="@string/string_add"
            android:gravity="center"
            android:textColor="@android:color/white"
            app:shape_solidColor="@color/colorAccent"
            android:layout_marginHorizontal="24dp"
            />
</LinearLayout>