<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="19dp"
            android:id="@+id/fl_top"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                >

            <TextView
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

            <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:onClick="backClick"
                    android:padding="9dp"
                    android:src="@mipmap/icon_back"
                app:tint="@color/textColor" />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <EditText
                android:id="@+id/edPayPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingHorizontal="12dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/string_input_pass_word"
                android:background="@color/transparent"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="16dp"
                android:background="#e5e5e5"
                />

        <EditText
                android:id="@+id/edConfirmPayPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingHorizontal="12dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/string_input_zsryc"
                android:background="@color/transparent"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="16dp"
                android:background="#e5e5e5"
                />

        <com.hjq.shape.view.ShapeTextView
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:shape_radius="6dp"
                android:layout_marginTop="30dp"
                android:text="@string/string_btn_qr"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="20dp"
                app:shape_solidColor="@color/colorAccent"
                />
    </LinearLayout>
</LinearLayout>